# mme

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  dev  external_modules.nix  flake.nix  index.html  mize.toml  mize_module.nix  package-lock.json  package.json  postcss.config.js  rollup.config.js  run.sh  rust-toolchain.toml  tailwind.config.js  test.html  webpack.config.js
public/: bundle.css  main-folder.js  main-folder.js.map  main.js  main.json  top-bar.js  top-bar.js.map
src/: Link.svelte  TopBar.svelte  folder-json.js  folder-main.js  index.js  lib.rs  logging.rs  main-folder.js  main.cpp  main.js  main.rs  side-bar.js  top-bar.js
src/components/: FolderMain.svelte  TopBarEntry.svelte  folder.svelte
src/core/: adapter.rs  error.rs  mme.rs  presenter.rs  slot.rs  space.rs  widget.rs
src/implementors/html/: index.nix  mod.rs  webview_con.rs
src/implementors/html/js-runtime/: index.html  main.js  package-lock.json  package.json  vite.config.js
src/implementors/html/js-runtime/src/: main.jsx
src/implementors/qt_widget/: mod.rs
src/implementors/slint_widget/: mod.rs
src/implementors/slint_widget/qt_backend/: Cargo.toml  lib.rs  qt_window.rs
