[package]
name = "mme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = [ "i-slint-backend-qt/cpp" ]

[dependencies]
clap = { version = "4.5.8", features = ["cargo"] }
colored = "2.1.0"
cpp = "0.5.9"
enum_dispatch = "0.3.13"
#slint = { path = "gitignore/slint/api/rs/slint" }
#i-slint-backend-qt = { path = "src/implementors/slint_widget/qt_backend" }
#slint-interpreter = { path = "gitignore/slint/internal/interpreter" }
spin_on = "0.1.1"
tao = "0.28.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wry = "0.41.0"
qt_gui = "0.5.0"
qt_core = "0.5.0"
qt_widgets = "0.5.0"
slint = "1.7.1"
slint-interpreter = "1.7.1"
#qt_gui = "0.5.0"
comandr = { git = "https://github.com/c2vi/comandr" }
mize = { git = "https://github.com/c2vi/mize" }
i-slint-backend-qt = "1.7.1"

[build-dependencies]
cc = "1.1.5"
cpp_build = "0.5"

[lib]
crate-type =["cdylib", "rlib"]
