# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-Royalty-free-2.0 OR LicenseRef-Slint-Software-3.0

[package]
name = "i-slint-backend-qt"
description = "Qt rendering backend for Slint"
#authors.workspace = true
#edition.workspace = true
#homepage.workspace = true
#license.workspace = true
#repository.workspace = true
#rust-version.workspace = true
#version.workspace = true
#links = "i_slint_backend_qt" # just so we can pass metadata to the dependee's build script

[features]
rtti = ["i-slint-core/rtti"]
#default = ["enable"]
#enable = ["dep:cpp", "dep:lyon_path", "dep:once_cell", "dep:pin-project", "dep:pin-weak", "dep:qttypes", "dep:cpp_build"]

[lib]
path = "lib.rs"

[dependencies]
const-field-offset = "0.1.5"
#i-slint-common = { workspace = true }
#i-slint-core-macros = { workspace = true }
#i-slint-core = { workspace = true, features = ["std"] }

#const-field-offset = { version = "0.1", path = "../../../helper_crates/const-field-offset" }
#vtable = { workspace = true }

#cpp = { version = "0.5.5", optional = true }

cpp = { version = "0.5.5" }
i-slint-common = "1.7.1"
i-slint-core = "1.7.1"
i-slint-core-macros = "1.7.1"
lyon_path = { version = "1" }
once_cell = { version = "1" }
pin-project = { version = "1" }
pin-weak = { version = "1" }
qttypes = { version = "0.2.7", default-features = false }
vtable = "0.2.0"

[build-dependencies]
cpp_build = { version =  "0.5.5" }
